# swgpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: core.c  core.h  utils.c  utils.h
raytracer/: bxdf.c  bxdf.h  camera.c  camera.h  common.c  common.h  main.c  mesh.c  mesh.h  mtwister.c  pathtracer.c  pathtracer.h  scene.c  scene.h  texture.c  texture.h
